# dataframing

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGES  LICENSE  README.md  conftest.py  pyproject.toml  requirements.test.txt
.github/workflows/: ci.yml
src/dataframing/: __init__.py  dflike.py  io.py  protocols.py  transform.py  validation.py
src/dataframing/testsuite/: test_io.py  test_transform.py
